--- a/lib/erb-builder/templates/chef_server.json.erb
+++ b/lib/erb-builder/templates/chef_server.json.erb
@@ -30,7 +30,7 @@
       "Default": "Chef Server for SkyHopper"
     },
 
-    "ChefPackageURL": { "Type" : "String", "Default": "https://web-dl.packagecloud.io/chef/stable/packages/el/6/chef-server-core-12.0.8-1.el6.x86_64.rpm" },
+    "ChefPackageURL": { "Type" : "String", "Default": "https://packages.chef.io/stable/el/6/chef-server-core-12.6.0-1.el6.x86_64.rpm" },
     "ChefUser":       { "Type" : "String", "Default": "skyhopper" },
     "ChefFullName":   { "Type" : "String", "Default": "anakin skyhopper" },
     "ChefEmail":      { "Type" : "String", "Default": "skyhopper@example.com" },
