--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -26,7 +26,8 @@
         | orderBy sortKey sortOrders[sortKey]
         | paginate" :class="{info: picked == entry}">
         <td v-for="key in columns" @click="select_entry(entry)" @dblclick="show_entry(entry)">
-          <span id="{{key}}" v-html="entry[key] | listen key index lang"></span>
+          <span v-if="key === 'stack_name'"> <a href="#" @click="show_entry(entry)" v-html="entry[key] | listen key index lang"></a></span>
+          <span v-else id="{{key}}" v-html="entry[key] | listen key index lang"></span>
         </td>
       </tr>
       <tr  v-if="filteredLength === 0 && data.length > 0">
