Fixed broken layout of zabbix server page

--- a/app/views/zabbix_servers/index.html.erb
+++ b/app/views/zabbix_servers/index.html.erb
@@ -1,6 +1,9 @@
+<% provide(:title, I18n.t('zabbix.zabbix')) %>
+<%- model_class = Project -%>
 <p id="notice"><%= notice %></p>
-<% provide(:title, I18n.t('zabbix')) %>
-<h1>Listing Zabbix Servers</h1>
+<div class="page-header">
+  <h1><%= t 'projects.project' %></h1>
+</div>
 
 
 <!-- component template -->
