--- a/app/views/zabbix_servers/new.html.erb
+++ b/app/views/zabbix_servers/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Zabbix Server</h1>
-
-<%= render 'form' %>
+<% provide(:title, I18n.t('projects.project')+" | "+I18n.t('helpers.titles.new')) %>
+<%- model_class = ZabbixServer -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
