--- a/app/views/zabbix_servers/_form.html.erb
+++ b/app/views/zabbix_servers/_form.html.erb
@@ -12,17 +12,14 @@
   <% end %>
 
   <div class="form-group">
-    <% if @zabbix_server.id == 1 %>
-      <%= f.label :fqdn, class: 'control-label col-sm-2' %>
-      <div class="col-sm-5">
-        <%= f.text_field :fqdn, class: 'form-control', readonly: true %>
-      </div>
-    <% else %>
     <%= f.label :fqdn, class: 'control-label col-sm-2' %>
-      <div class="col-sm-5">
+    <div class="col-sm-5">
+      <% if @zabbix_server.id == 1 %>
         <%= f.text_field :fqdn, class: 'form-control', readonly: true %>
-      </div>
-    <% end %>
+      <% else %>
+        <%= f.text_field :fqdn, class: 'form-control', required: true %>
+      <% end %>
+    </div>
   </div>
   <div class="form-group">
     <%= f.label :username, class: 'control-label col-sm-2' %>
@@ -37,9 +34,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :details, class: 'control-label col-sm-2' %>
+    <%= f.label :details, t('zabbix_servers.details'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_field :details, class: 'form-control', required: true %>
+      <%= f.text_area :details, class: 'form-control' %>
     </div>
   </div>
   <div class="form-actions-top">
