--- a/app/views/zabbix_servers/edit.html.erb
+++ b/app/views/zabbix_servers/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, I18n.t('projects.project')+" | "+I18n.t('helpers.titles.edit')) %>
+<% provide(:title, I18n.t('zabbix_servers.zabbix')+" | "+I18n.t('helpers.titles.edit')) %>
 <%- model_class = ZabbixServer -%>
 <div class="page-header">
   <h1><%=t '.title', default: [:'helpers.titles.edit', 'Edit %{model}'], model: model_class.model_name.human.titleize %></h1>
