--- a/app/views/zabbix_servers/index.html.erb
+++ b/app/views/zabbix_servers/index.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, I18n.t('zabbix.zabbix')) %>
-<%- model_class = Project -%>
-<p id="notice"><%= notice %></p>
+<% provide(:title, I18n.t('zabbix_servers.zabbix')) %>
+<%- model_class = ZabbixServer -%>
 <div class="page-header">
-  <h1><%= t 'projects.project' %></h1>
+  <h1><%= t 'zabbix_servers.zabbix' %></h1>
 </div>
 
 
@@ -50,7 +49,7 @@
 <br>
 
 <%= link_to(
-  t('clients.btn.add'),
+  t('zabbix_servers.btn.add'),
   new_zabbix_server_path,
   class: 'btn btn-primary btn-sm'
 ) if current_user.admin? %>
