--- a/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
+++ b/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
@@ -26,7 +26,7 @@
 
       <div class="modal-footer">
         <div v-if="!loading">
-          <button @click="save_retention_policy(volume_selected, editing_policy.enabled, editing_policy.max_amount)" class="btn btn-primary"><%= t('helpers.titles.save') %></button>
+          <button @click="save_retention_policy(volume_selected, editing_policy)" class="btn btn-primary"><%= t('helpers.titles.save') %></button>
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
         </div>
         <div-loader v-if="loading"></div-loader>
