--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -88,7 +88,7 @@
             <div class="panel-group collapse" id="ebs_panel" role="tabpanel" style="margin-bottom: 0px">
               <div class="panel panel-info">
                 <div class="panel-heading" transition="fade">
-                  <strong>操作 :</strong>
+                  <strong>{{volume_selected}} :</strong>
                   <button @click="create_snapshot(volume_selected)" class="btn btn-xs btn-primary">
                     <span class="glyphicon glyphicon-plus"></span>
                     <%= t('snapshots.create_snapshot') %>
