--- a/app/views/users_admin/new.html.erb
+++ b/app/views/users_admin/new.html.erb
@@ -34,6 +34,15 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label t('zabbix_servers.zabbix'), class: 'col-sm-2 control-label' %>
+    <div class="col-sm-5">
+      <%= f.select(:zabbix_servers, options_from_collection_for_select(@zabbix_servers, 'id', 'fqdn'), {}, {:multiple => true, :size => 10}) %>
+    </div>
+  </div>
+
+
+
   <div class="form-actions-top">
     <%= f.submit t('helpers.links.create'), class: "btn btn-primary create" %>
     <%= link_to t('.cancel', default: t("helpers.links.cancel")),
