Enable to detach volume from EC2 instance

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -113,6 +113,9 @@
                       <%= t('common.not_set') %>
                     </span>
                   </button>
+                  <span style="float: right;">
+                    <button @click="detach_volume" class="btn btn-xs btn-default"><span class="fa fa-eject"></span></button>
+                  </span>
                 </div>
               </div>
               <div id="ebs_panel" class="panel">
