--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -34,7 +34,7 @@
 
       <div class="pull-right">
         <div class="btn-group">
-             <a class="btn btn-default btn-sm dropdown-toggle disabled" data-toggle="dropdown" href="#" :class="{disabled: !is_picked()}">
+             <a class="btn btn-default btn-sm dropdown-toggle disabled" data-toggle="dropdown" href="#" :class="{disabled: !picked}">
                <%= t 'common.btn.settings' %> <span class="caret"></span>
              </a>&nbsp
              <ul class="dropdown-menu">
