Create-Snapshot button with camera icon

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -90,7 +90,7 @@
                 <div class="panel-heading" transition="fade">
                   <strong>{{volume_selected}} :</strong>
                   <button @click="create_snapshot(volume_selected)" class="btn btn-xs btn-primary">
-                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="glyphicon glyphicon-camera"></span>
                     <%= t('snapshots.create_snapshot') %>
                   </button>
                   <button @click="edit_retention_policy" href="#retention-policy-modal" data-toggle="modal" class="btn btn-xs btn-warning">
