New vue on application settings and generate keypair function"

--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -2,7 +2,7 @@
 <% provide(:title, I18n.t("app_settings.title.setup")) %>
 <h1 class="page-header"><%= t 'app_settings.title.show' %></h1>
 
-<div class="panel panel-primary">
+<div id="indexElement" class="panel panel-primary">
   <div class="panel-heading">
     <%= I18n.t("app_settings.title.setup") %>
   </div>
