--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -7,7 +7,12 @@
     <div class="form-group">
       <label for="log_directory" class="col-sm-3 control-label"><%= t 'app_settings.log_directory' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="log_directory" name="log_directory" pattern="^[~/].+" required>
+        <input type="text" class="form-control" v-model="params.log_directory" value='/app/skyhopper/logs'  pattern="^[~/].+" readonly="true">
+        <p class="help-block"><%= I18n.t('app_settings.msg.log_directory') %></p>
+      </div>
+      <label for="app_directory" class="col-sm-3 control-label"><%= t 'app_settings.app_directory' %></label>
+      <div class="col-sm-7">
+        <input type="text" class="form-control" v-model="params.app_directory" value='/app/skyhopper' pattern="^[~/].+" readonly="true">
         <p class="help-block"><%= I18n.t('app_settings.msg.log_directory') %></p>
       </div>
     </div>
@@ -20,7 +25,7 @@
     <div class="form-group">
       <label for="access_key" class="col-sm-3 control-label"><%= t 'app_settings.access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="access_key" name="access_key" pattern="[^\s]+" required>
+        <input type="text" class="form-control" v-model="params.access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.access_key') %></p>
       </div>
     </div>
@@ -28,7 +33,7 @@
     <div class="form-group">
       <label for="secret_access_key" class="col-sm-3 control-label"><%= t 'app_settings.secret_access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control form-control-masked" id="secret_access_key" name="secret_access_key" pattern="[^\s]+" required>
+        <input type="text" class="form-control form-control-masked" v-model="params.secret_access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.secret_access_key') %></p>
       </div>
     </div>
@@ -36,7 +41,7 @@
     <div class="form-group">
       <label for="aws_region" class="col-sm-3 control-label"><%= t 'app_settings.aws_region' %></label>
       <div class="col-sm-7">
-        <select class="form-control" id="aws_region" name="aws_region">
+        <select class="form-control" v-model="params.aws_region" name="aws_region">
           <%= please_select_option %>
           <%= options_for_select(AWS::Regions) %>
         </select>
@@ -47,11 +52,24 @@
     <div class="form-group">
       <label class="col-sm-3 control-label"><%= t 'app_settings.aws_keypair' %></label>
       <div class="col-sm-7">
+        <select class="form-control" v-model="params.key_select">
+          <%= please_select_option %>
+          <option value="0"> Create a new KeyPair </option>
+          <option value="2"> Drop Existing KeyPair </option>
+        </select>
+      </div>
+      <label v-if="params.key_select == 0" class="col-sm-3 control-label"></label>
+      <div class="col-sm-7" v-if="params.key_select == 0">
+        <label for="keypair_name" class="control-label" v-if="key_pair_name">{{key_pair_name}}</label>
+        <button class="btn btn-sm btn-default" v-if="params.key_select" @click="create_key">Create & Download</button>
+      </div>
+      <label v-if="params.key_select == 2" class="col-sm-3 control-label"></label>
+      <div class="col-sm-7" v-if="params.key_select == 2">
         <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
-        <input id="keypair_name" class="form-control ec2-private-key-name" type="text" name="keypair_name" required maxlength="255">
+        <input v-model="params.keypair_name" class="form-control ec2-private-key-name" type="text" name="keypair_name" required maxlength="255">
 
         <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
-        <textarea id="keypair_value" class="form-control ec2-private-key-value" name="keypair_value" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7"></textarea>
+        <textarea v-model="params.keypair_value" class="form-control ec2-private-key-value" name="keypair_value" placeholder="<%= t 'common.msg.key_droppable' %>" rows="3"></textarea>
         <p class="help-block"><%= t('app_settings.msg.aws_keypair') %></p>
       </div>
     </div>
