--- a/app/views/infrastructures/modal/_modal_create_volume.html.erb
+++ b/app/views/infrastructures/modal/_modal_create_volume.html.erb
@@ -35,7 +35,9 @@
           <div class="form-group">
             <label class="control-label col-md-4" for="input-availability-zone">Availability Zone</label>
             <div class="col-md-6">
-              <input id="input-availability-zone" class="form-control" type="text" v-model="volume_options.availability_zone" required>
+              <select id="input-availability-zone" class="form-control" v-model="volume_options.availability_zone" required>
+                <option v-for="az in ec2.availability_zones.available">{{az.zone_name}}</option>
+              </select>
             </div>
           </div>
           <div class="form-group">
