--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  *= require font-awesome
  *= require offline-theme-chrome
  *= require offline-language-english
+ *= require introjs
  */
 
 .modal-header {
