--- a/app/views/layouts/_navbar_top.html.erb
+++ b/app/views/layouts/_navbar_top.html.erb
@@ -41,8 +41,13 @@
           </ul>
         </li>
       </ul>
-<% if user_signed_in? %>
       <ul class="nav navbar-nav navbar-right">
+        <% if AppSetting.set? %>
+        <li class="dropdown">
+          <a href="#" role="button" class="pull-right" id="notifications" data-toggle="modal" data-target="#notification-center"><span class="text-info"><%= fa_icon 'universal-access' %> Help</span></a>
+        </li>
+        <% end %>
+        <% if user_signed_in? %>
         <li>
           <a href="#" role="button" id="notifications" data-toggle="modal" data-target="#notification-center"><%= glyphicon 'comment' %></a>
         </li>
@@ -61,8 +66,8 @@
             <li role="presentation"><%= link_to t('common.btn.logout'), destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
+        <% end %>
       </ul>
-<% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 
