Intro.js functionality added in application settings with corresponding iT18N

--- a/app/views/app_settings/_panel_content_chef.html.erb
+++ b/app/views/app_settings/_panel_content_chef.html.erb
@@ -1,7 +1,7 @@
 <%# TODO: I18n %>
 <form class="form-horizontal">
   <legend><%= t('app_settings.title.chef') %></legend>
-  <div class="form-group">
+  <div class="form-group" data-position="top" data-step="5" data-intro="<%= t('app_settings.intro.chef_button') %>">
     <label class="col-sm-3 control-label"><%= t 'app_settings.chef_server' %></label>
     <div class="col-sm-7">
       <button class="btn btn-primary" v-if="!creating" :disabled="!required_filed" @click="create()"><%= t 'app_settings.btn.create_chefserver' %></button>
