--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -9,7 +9,7 @@
         <a href="#" role="button" class="pull-right" id="flexi_form_start" href="javascript:void(0);"><span class="text-info"><%= fa_icon 'universal-access' %> Help</span></a>
       <% end %>
     </legend>
-    <div class="form-group" data-step="1" data-intro="This is flexible forms tour">
+    <div class="form-group">
       <label for="log_directory" class="col-sm-3 control-label"><%= t 'app_settings.log_directory' %></label>
       <div class="col-sm-7">
         <input type="text" class="form-control" v-model="params.log_directory" value='/app/skyhopper/logs'  pattern="^[~/].+" readonly="true">
@@ -27,15 +27,12 @@
   <fieldset>
     <legend><%= t('app_settings.title.aws') %>&nbsp;<button type="button" class="btn btn-link" data-toggle="popover" title="AWS" data-content="<%= t('app_settings.msg.aws_description') %>"><%= glyphicon 'question-sign' %></button></legend>
 
-    <div class="form-group" data-step="2" data-intro="Flexible form default layout with multiple field types">
+    <div class="form-group" data-step="1" data-intro="<%= t('app_settings.intro.aws_keys') %>">
       <label for="access_key" class="col-sm-3 control-label"><%= t 'app_settings.access_key' %></label>
       <div class="col-sm-7">
         <input type="text" :disabled="creating" class="form-control" v-model="params.access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.access_key') %></p>
       </div>
-    </div>
-
-    <div class="form-group" data-step="3" data-position="left" data-intro="Inline form validation">
       <label for="secret_access_key" class="col-sm-3 control-label"><%= t 'app_settings.secret_access_key' %></label>
       <div class="col-sm-7">
         <input type="text" :disabled="creating" class="form-control form-control-masked" v-model="params.secret_access_key" pattern="[^\s]+" required>
@@ -43,7 +40,7 @@
       </div>
     </div>
 
-    <div class="form-group" data-step="4" data-intro="Customizable Form Layouts">
+    <div class="form-group" data-step="2" data-intro="<%= t('app_settings.intro.aws_region') %>">
       <label for="aws_region" class="col-sm-3 control-label"><%= t 'app_settings.aws_region' %></label>
       <div class="col-sm-7">
         <select :disabled="creating" class="form-control" v-model="params.aws_region" name="aws_region">
@@ -54,7 +51,7 @@
       </div>
     </div>
 
-    <div class="form-group" v-if="!params.keypair_name" data-step="5" data-intro="Guidence for filling forms">
+    <div class="form-group" data-position="top" v-if="!params.keypair_name" data-step="3" data-intro="<%= t('app_settings.intro.aws_keypair') %>">
       <label class="col-sm-3 control-label"><%= t 'app_settings.aws_keypair' %></label>
       <div class="col-sm-7">
         <select :disabled="creating" class="form-control" v-model="key_select">
